--- a/style.css
+++ b/style.css
@@ -44,14 +44,14 @@ button:hover, #logInLink:hover {
   background-color: #e6aa74;
 }
 
-.game-container {
+.gameContainer {
   clear: both;
   display: flex;
   width: 100%;
   gap: 15px;
 }
 
-.game-box {
+.gameBox {
   position: relative;
   width: 50%;
   height: 300px;
@@ -60,7 +60,7 @@ button:hover, #logInLink:hover {
   overflow: hidden;
 }
 
-.game-box img {
+.gameBox img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -93,16 +93,18 @@ input {
   margin-top: 0.3rem;
   border: 1px solid #ccc;
   border-radius: 6px;
+  overflow: hidden;
+  border-collapse: separate;
 }
 
-#signUpForm, #logOutButton {
+#signUpForm {
   display: none;
 }
+
 table {
   border-collapse: collapse;
   width: 75%;
   margin: 20px auto;
-  font-family: sans-serif;
 }
 th, td {
   border: 1px solid #ccc;
@@ -112,9 +114,9 @@ th, td {
 th {
   background-color: #f2f2f2;
 }
-table thead tr :not(:first-child) {
+th:not(:first-child) {
   text-decoration: underline;
 }
-table thead tr :not(:first-child):hover {
+th:not(:first-child):hover {
   cursor: pointer;
 }
